<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ClawdPet</string>
    <string name="settings_title">Settings</string>
    <string name="server_url_label">Server URL</string>
    <string name="server_url_hint">http://192.168.1.100:9870</string>
    <string name="test_connection">Test Connection</string>
    <string name="save">Save</string>
    <string name="connection_success">Connected successfully</string>
    <string name="connection_failed">Connection failed</string>
    <string name="url_required">Server URL is required</string>
    <string name="url_invalid">Invalid URL format</string>
    <string name="no_server_configured">No server configured</string>
    <string name="notification_channel_name">ClawdPet Service</string>
    <string name="notification_channel_desc">Keeps ClawdPet running in the background</string>
    <string name="notification_title">ClawdPet is watching</string>
    <string name="notification_text">Dashboard active</string>
    <string name="long_press_back_hint">Long-press back to open settings</string>

    <string name="section_notifications">Notifications</string>
    <string name="sound_enabled_label">Enable sounds</string>
    <string name="sound_permission_label">Permission request sound</string>
    <string name="sound_finished_label">Task finished sound</string>
    <string name="sound_default">System default</string>
    <string name="vibrate_intensity_label">Vibration intensity</string>
    <string-array name="vibrate_options">
        <item>Off</item>
        <item>Light</item>
        <item>Medium</item>
        <item>Strong</item>
    </string-array>
    <string name="section_startup">Startup</string>
    <string name="auto_start_label">Launch on boot</string>
    <string name="auto_start_hint">Some manufacturers require enabling auto-start in system settings</string>
</resources>
